[package]
name = "du"
version = "0.1.1"
authors = ["Rocky Meza <rockymeza@gmail.com>"]
description = "Implementing du -sb in order to learn Rust"
repository = "https://github.com/rockymeza/rust-du"
readme = "README.md"
license = "MIT"

[[bin]]
name = "rust-du"

[dependencies]
getopts = "0.2"

[dev-dependencies]
tempdir = "0.3"
rand = "0.3"
